prow/aws/cluster/deck_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deck
  namespace: default
  labels:
    app: deck
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: deck
  template:
    metadata:
      labels:
        app: deck
    spec:
      serviceAccountName: deck
      terminationGracePeriodSeconds: 30
      containers:
      - name: deck
        image: us-docker.pkg.dev/k8s-infra-prow/images/deck:v20260526-71428b9c2
        ports:
        - name: http
          containerPort: 8080
        - name: metrics
          containerPort: 9090
        args:
        - --config-path=/etc/config/config.yaml
        - --hook-url=http://hook:8888/plugin-help
        - --job-config-path=/etc/job-config
        - --spyglass
        - --tide-url=http://tide/
        - --rerun-creates-job
        - --oauth-url=/github-login
        - --github-token-path=/etc/github/oauth
        - --github-endpoint=http://ghproxy
        - --github-endpoint=https://api.github.com
        - --github-oauth-config-file=/etc/githuboauth/secret
        - --cookie-secret=/etc/cookie/secret
        - --s3-credentials-file=/etc/cf-r2-public-buckets-ro-credentials/service-account.json
        volumeMounts:
        - name: oauth-config
          mountPath: /etc/githuboauth
          readOnly: true
        - name: cookie-secret
          mountPath: /etc/cookie
          readOnly: true
        - name: oauth-token
          mountPath: /etc/github
          readOnly: true
        - name: config
          mountPath: /etc/config
          readOnly: true
        - name: job-config
          mountPath: /etc/job-config
          readOnly: true
        - mountPath: /etc/kubeconfig
          name: kubeconfig
          readOnly: true
        - mountPath: /etc/cf-r2-public-buckets-ro-credentials
          name: cf-r2-public-buckets-ro-credentials
          readOnly: true
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 3
          timeoutSeconds: 600
      volumes:
      - name: oauth-config
        secret:
          secretName: github-oauth-config
      - name: oauth-token
        secret:
          secretName: oauth-token
      - name: cookie-secret
        secret:
          secretName: cookie
      - name: config
        configMap:
          name: config
      - name: job-config
        configMap:
          name: job-config
      - name: kubeconfig
        configMap:
          defaultMode: 420
          name: kubeconfig
      - name: cf-r2-public-buckets-ro-credentials
        secret:
          secretName: cf-r2-public-buckets-ro-credentials
